name:                click
version:             0.0.1
synopsis:            Clicky
-- description:
license:             GPL-3
author:              Alex McLean
maintainer:          Alex McLean <alex@slab.org>
Stability:           Experimental
Copyright:           (c) Alex McLean 2018
category:            Sound
build-type:          Simple
-- cabal-version:       >=1.10
tested-with:         GHC == 7.10.3, GHC == 8.0.1, GHC == 8.4.1

Description: Click click

library
  default-language:    Haskell2010

  Exposed-modules:     Click

  Build-depends:
      base < 5
    , tidal
    , serialport
              , hosc
              , bytestring